fixed a z-index bug

--- a/style/style.css
+++ b/style/style.css
@@ -738,6 +738,7 @@ body {
 }
 #topTitle {
 	position: fixed;
+	z-index: 5;
 	top: 0;
 	line-height: 10vh;
 	min-height: 44px;
